# aurex_desktop

./: .gitignore  log.txt  package-lock.json  package.json  vite.config.js
aurex_desktop/: README.md  package-lock.json  package.json
src/: ambient.d.ts  app.css  app.html  colors.css
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  audio_player.rs  constants.rs  error.rs  lib.rs  library_service.rs  lyrics.rs  main.rs  media_lib_cmd.rs  metadata.rs  models.rs  traits.rs
src/lib/: bindings.ts  helpers.ts  player.svelte.ts  router.svelte.ts  state.svelte.ts
src/lib/icons/: add-to-queue-icon.svelte  albums-icon.svelte  artists-icon.svelte  cross-icon.svelte  double-note-icon.svelte  drag-icon.svelte  home-icon.svelte  left-half-arrow.svelte  loop-icon.svelte  loop-once-icon.svelte  lyrics-icon.svelte  next-icon.svelte  pause-icon.svelte  person-icon.svelte  play-icon.svelte  play-next-icon.svelte  playlist-icon.svelte  plus-icon.svelte  previous-icon.svelte  queue-icon.svelte  recently-added-icon.svelte  search-icon.svelte  settings-icon.svelte  shuffle-icon.svelte  songs-icon.svelte  window-icons.svelte
src/lib/ui/: create-playlist-dialog.svelte  delete-playlist-dialog.svelte  line-lyric.svelte  lyric-gap.svelte  lyric-line.svelte  lyrics.svelte  navbar-item.svelte  navbar-label.svelte  navbar.svelte  new-playlist-button.svelte  now-playing.svelte  onboarding-dialog.svelte  pane-controls.svelte  playback-controls.svelte  playlist-context-menu.svelte  popping-button.svelte  queue-context-menu.svelte  queue-tile.svelte  queue.svelte  right-pane.svelte  seekbar.svelte  stack-view.svelte  titlebar.svelte  track-context-menu.svelte  track-info.svelte  virtual-list.svelte  window-controls.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/albums/: album-card.svelte  album-view.svelte  albums-page-inner.svelte  albums-page.svelte  card-button.svelte  header.svelte  tile.svelte
src/routes/artists/: artist-view.svelte  artists-page.svelte
src/routes/songs/: header.svelte  (+2 more)
(+62 files in other folders)
